<resources>
    <string name="app_name">shemajamebeli2</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="activeusers">ActiveUsers</string>
    <string name="removedusers">RemovedUsers</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="update">Update</string>
</resources>